// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationCard component should render component correctly 1`] = `
<LocationCard
  distanceRadius={42}
  hasRadius={true}
  locationTitle="London"
  maxRadius={100}
  minRadius={1}
  onDelete={[MockFunction]}
  radiusStep={1}
  sliderLabel="+42 km"
>
  <div
    className="LocationCard"
  >
    <div
      className="LocationCard__header"
    >
      <Text
        className="LocationCard__title"
        size="large"
        title="London"
      >
        <p
          className="Text--size_large LocationCard__title"
          title="London"
        >
          London
        </p>
      </Text>
      <button
        className="LocationCard__deleteButton"
        onClick={[Function]}
        type="button"
      >
        ×
      </button>
    </div>
    <div
      className="LocationCard__slider"
    >
      <Slider
        max={100}
        min={1}
        onChange={[Function]}
        step={1}
        value={42}
      >
        <Slider
          max={100}
          min={1}
          onChange={[Function]}
          step={1}
          value={42}
        >
          <div
            className="rc-slider rc-slider-horizontal"
            onMouseDown={[Function]}
          >
            <div
              className="rc-slider-rail"
            />
            <Tracks
              onStartMove={null}
              prefixCls="rc-slider"
              values={
                Array [
                  42,
                ]
              }
            >
              <Track
                end={42}
                index={0}
                key="0"
                onStartMove={null}
                prefixCls="rc-slider"
                start={1}
              >
                <div
                  className="rc-slider-track"
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "left": "0%",
                      "width": "41.41414141414141%",
                    }
                  }
                />
              </Track>
            </Tracks>
            <Steps
              marks={Array []}
              prefixCls="rc-slider"
            >
              <div
                className="rc-slider-step"
              />
            </Steps>
            <Handles
              draggingIndex={-1}
              onOffsetChange={[Function]}
              onStartMove={[Function]}
              prefixCls="rc-slider"
              values={
                Array [
                  42,
                ]
              }
            >
              <Handle
                dragging={false}
                key="0"
                onOffsetChange={[Function]}
                onStartMove={[Function]}
                prefixCls="rc-slider"
                value={42}
                valueIndex={0}
              >
                <div
                  aria-disabled={false}
                  aria-valuemax={100}
                  aria-valuemin={1}
                  aria-valuenow={42}
                  className="rc-slider-handle"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                  role="slider"
                  style={
                    Object {
                      "left": "41.41414141414141%",
                      "transform": "translateX(-50%)",
                    }
                  }
                  tabIndex={0}
                />
              </Handle>
            </Handles>
            <Marks
              marks={Array []}
              onClick={[Function]}
              prefixCls="rc-slider"
            />
          </div>
        </Slider>
      </Slider>
      <Text
        className="LocationCard__sliderLabel"
        size="small"
      >
        <p
          className="Text--size_small LocationCard__sliderLabel"
        >
          +42 km
        </p>
      </Text>
    </div>
  </div>
</LocationCard>
`;

exports[`LocationCard component should render component correctly without radius slider 1`] = `
<LocationCard
  distanceRadius={42}
  hasRadius={false}
  locationTitle="London"
  maxRadius={100}
  minRadius={1}
  onDelete={[MockFunction]}
  radiusStep={1}
  sliderLabel="+42 km"
>
  <div
    className="LocationCard"
  >
    <div
      className="LocationCard__header"
    >
      <Text
        className="LocationCard__title"
        size="large"
        title="London"
      >
        <p
          className="Text--size_large LocationCard__title"
          title="London"
        >
          London
        </p>
      </Text>
      <button
        className="LocationCard__deleteButton"
        onClick={[Function]}
        type="button"
      >
        ×
      </button>
    </div>
  </div>
</LocationCard>
`;
